--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </div>
 
 <div class="skill-row">
-  <img class="interests-pic" src="images/newskill.jpg" alt="myskills">
+  <img class="interests-pic" src="images/interests.jpg" alt="myskills">
 
   <h3 >Interests</h3>
   <p>I am a guy who loves playing football to the moon and back💚.I enjoy reading books and random articles too.</p>
